kube/currency.yaml
apiVersion: v1
kind: Service
metadata:
  name: currency
  labels:
    app: currency
    service: currency
spec:
  type: NodePort
  selector:
    app: currency
  ports:
  - nodePort: 30501
    port: 80
    protocol: TCP
    name: http
    targetPort: 80
  selector:
    app: currency
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-v1
  labels:
    app: currency
    version: v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: currency
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: currency
        version: v1
    spec:
      serviceAccountName: currency-sa
      containers:
      - name: currency
        image: bearchik/currency:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /currency/api/rate
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 3
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: currency-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: currency
spec:
  hosts:
  - "*"
  gateways:
  - currency-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: currency
        port:
          number: 80
